@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin snit n 0.81.1]
+[manpage_begin snitfaq n 0.81.1]
 [copyright {2003, by William H. Duquette}]
 [moddesc {Snit}]
 [titledesc   {Snit Frequently Asked Questions}]
 [require Tcl 8.3]
-[require snit [opt 0.81.1]]
+[require snit [opt 0.82]]
 [description]
 [para]
 
